# ROS2_Arduino_Bridge

./: CMakeLists.txt  README.md  package.xml
Arduino_Code/: motor_control.ino
src/: arduino_bridge.py
