<?xml version="1.0"?>
<package format="2">
  <name>ros2_arduino_bridge</name>
  <version>0.0.0</version>
  <description>ROS2 Arduino Bridge</description>
  <maintainer email="sidd1212004@gmail.com">Siddharth</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>

  <exec_depend>rclpy</exec_depend>
</package>
